--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,5 +11,5 @@
 	<link href="/css/bootstrap.css" rel="stylesheet">
 	<link href="/css/jumbotron-narrow.css" rel="stylesheet">
 	<link href="/css/style.css" rel="stylesheet">
-	<!-- {% include analytics.html %} -->
+	{% include analytics.html %}
 </head>
