- Adds portfolio page.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
 		<li class="{{ page.about }}"><a href="/" title="About">About</a></li>
 		<li class="{{ page.resume }}"><a href="/resume" title="Resume">Resume</a></li>
 		<li class="{{ page.projects }}"><a href="/projects" title="Projects">Projects</a></li>
+		<li class="{{ page.portfolio }}"><a href="/portfolio" title="Portfolio">Portfolio</a></li>
 	</ul>
 	<ul class="nav nav-pills pull-right">
 		<li class="{{ page.contact }}"><a href="/contact" title="Contact">Contact</a></li>
